<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <Button
        android:id="@+id/btn_unicode_next"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:text="@string/label_unicode_next"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:onClick="onClickBtnPos"
        />
    <Button
        android:id="@+id/btn_unicode_prev"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@id/btn_unicode_next"
        android:text="@string/label_unicode_prev"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:onClick="onClickBtnPos"
        />
    <EditText
        android:id="@+id/edittext_unicode_source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@id/btn_unicode_prev"
        android:singleLine="true"
        android:hint="@string/label_unicode_source"
        />
    <TextView
        android:id="@+id/text_unicode_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_unicode_source"
        android:hint="@string/label_unicode_detail"
        android:gravity="center_horizontal"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="#CCF"
        />
    <com.obnsoft.ptcm3.WrapTextView
        android:id="@+id/text_unicode_encoded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_unicode_detail"
        android:textSize="12sp"
        />
</RelativeLayout>
