<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:id="@+id/textIndex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:padding="8dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textIndex"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/text_explanation_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:paddingLeft="4dp"
                android:text="@string/label_explanations_header"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white"
                android:background="#448"
                />
            <TextView
                android:id="@+id/text_explanation_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_explanation_header"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:background="@drawable/frame"
                />
            <TextView
                android:id="@+id/text_explanation_second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_explanation_first"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:background="@drawable/frame"
                />
            <TextView
                android:id="@+id/text_forms_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_explanation_second"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:paddingLeft="4dp"
                android:text="@string/label_forms_header"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white"
                android:background="#484"
                />
            <TableLayout
                android:id="@+id/layout_forms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                android:layout_below="@+id/text_forms_header"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:stretchColumns="0"
                android:shrinkColumns="0"
                />
            <TextView
                android:id="@+id/text_params_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_forms"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:paddingLeft="4dp"
                android:text="@string/label_params_header"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white"
                android:background="#864"
                />
            <TableLayout
                android:id="@+id/layout_params"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                android:layout_below="@+id/text_params_header"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:stretchColumns="0,1"
                android:shrinkColumns="1"
                />
            <TextView
                android:id="@+id/text_returns_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_params"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:paddingLeft="4dp"
                android:text="@string/label_returns_header"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white"
                android:background="#488"
                />
            <TableLayout
                android:id="@+id/layout_returns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                android:layout_below="@+id/text_returns_header"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:stretchColumns="0,1"
                android:shrinkColumns="1"
                />
            <TextView
                android:id="@+id/text_samples_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_returns"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:paddingLeft="4dp"
                android:text="@string/label_samples_header"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white"
                android:background="#884"
                />
            <TableLayout
                android:id="@+id/layout_samples"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                android:layout_below="@+id/text_samples_header"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:stretchColumns="0,1"
                android:shrinkColumns="1"
                />
            <TextView
                android:id="@+id/text_notes_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_samples"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:paddingLeft="4dp"
                android:text="@string/label_notes_header"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white"
                android:background="#555"
                />
            <TableLayout
                android:id="@+id/layout_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                android:layout_below="@+id/text_notes_header"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:stretchColumns="0"
                android:shrinkColumns="0"
                />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
